# servicenow-agent

./: .gitignore  Modelfile  README.md  agent.py  backup.py  data_pipeline.py  download.py  embed.py  finetune_unsloth.py  ingest.py  main.py  make_bundle.py  mcp_fs_server.py  mcp_rag_server.py  mcp_server.py  prepare_dataset.py  pyproject.toml  rag_system.py  restore.py  smoke_test.py
.github/workflows/: build-bundle.yml
atlas/: __init__.py  agent.py  backup.py  chunk.py  doctor.py  download.py  fs_server.py  make_bundle.py  rag_server.py  restore.py  smoke_test.py  training.py
atlas/embed/: __init__.py  base.py  mlx.py  onnx.py
chroma_db/: chroma.sqlite3
tools/: convert_bge_to_mlx.py
