[project]
name = "servicenow-agent"
version = "0.2.0"
description = "Two-MCP-server knowledge layer for ServiceNow development: filesystem + portable RAG."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "transformers>=4.40",
    "tokenizers>=0.19",
    "onnxruntime>=1.18",
    "pandas>=2.2",
]

[project.optional-dependencies]
build = [
    "tqdm>=4.66",
]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
